2015-03-15 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-dossier-new-mini.ui: fix widget name.

	* src/ui/ofa-dossier-treeview.c: fix code not set.

	* src/ui/ofa-reconciliation.c: doesn't try to display the lines 
	count if not BAT file is loaded. 

2015-03-14 Pierre Wieser <pwieser@trychlos.org>

	Define a new date filter composite widget ofaDateFilterBin

	* src/ui/ofa-date-filter-bin.c,
	* src/ui/ofa-date-filter-bin.h:
	src/ui/ofa-date-filter-bin.ui: new files.

	* po/POTFILES.in,
	* src/ui/Makefile.am,
	* src/ui/Makefile.in: updated accordingly.

	* src/ui/ofa-view-entries.c: makes use of ofaDateFilterBin widget.

	* src/ui/ofa-reconciliation.c: makes use of ofaDateFilterBin widget
	 (todo #724).

	* src/ui/ofa-pdf-entries-balance.c,
	* src/ui/ofa-print-entries-balance.ui: fix 'Entries Balance' labels.

2015-03-13 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: post-release version bump.

	* src/ui/ofa-reconciliation.c:
	- let the user manually reconciliate an entry with a bat line (todo #721)
	- fix BAT line proposition (todo #722)
	- display count+unused batlines (todo #726).

	* src/ui/ofa-bat-store.c: sort per descending identifier (todo #725).

	* src/ui/ofa-bat-treeview.c: add padding around the frame.

2015-03-12 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-reconciliation.c: fix BAT line proposition (todo #718).

	* src/ui/ofa-view-entries.c:
	- display unbalanced solde in orange (todo #715)
	- doesn't display zero amounts (todo #716).

	* src/ui/ofa-ope-template-properties.c: fix row deletion (todo #713).

	New user preferences: whether to accept dot and/or comma as amount
	decimal separator (todo #712)

	* src/core/ofa-preferences.h: moves to src/api/ofa-preferences.h
	* src/ui/ofa-preferences.c: moved to src/core/ofa-preferences.c
	* src/ui/ofa-preferences.ui: moved to src/core/ofa-preferences.ui

	* src/ui/my-editable-amount.c: accept decimal separator from user 
	prefs.

	* src/ui/ofa-dossier-delete-prefs.piece.ui,